<resources>
    <string name="app_name">DialogandoBR</string>
    <string name="entrar">Entrar</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name='registrar'>Cadastrar</string>
    <string name='logo_temp'>D/G</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="teste">Teste Regroup</string>
    <string name="e_senha">Esqueceu a senha?</string>
    <string name="enviar">Enviar</string>
    <string name="b_vindo">Bem Vindo!</string>
    <string name="A_cadastro">Preencha os dados abaixo para realizar o cadastro</string>
    <string name="tmensagem">Mensagem</string>
    <string name="switchMensagem">Mensagens/Contatos</string>
    <string name="add_contato">Adicionar Contato</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="title_activity_tela_chat">TelaChat</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>