<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.TelaLogin">

    <Button
        android:id="@+id/entrar"
        style="@style/container_botao"
        android:layout_width="117dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/entrar"
        android:textColor="#EAE7E7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shadows"
        android:elevation="14dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:circularflow_defaultRadius="30dp"
        app:layout_constraintBottom_toTopOf="@+id/entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="4dp"
            android:background="@color/corNull"
            android:elevation="36dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/email"
            style="@style/borda"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/cointainer_text_input"
            android:ems="10"
            android:hint="@string/email"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:background="@color/corNull"
            android:text="@string/senha" />

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@drawable/cointainer_text_input"
            android:ems="10"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:padding="10dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:background="#0005ABFD"
        android:text="@string/logo_temp"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="D/G" />

    <Button
        android:id="@+id/teste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/teste"
        android:textColor="#5BF3EE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textforgetSenha"
        android:layout_width="254dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:background="@color/corNull"
        android:minHeight="48dp"
        android:text="@string/e_senha"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonCadastro"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCadastro"
        style="@style/container_botao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:elevation="30dp"
        android:text="@string/registrar"
        android:textColor="#EAE7E7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>